Release v3.1.4